--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,11 @@
 	padding: 0;
 	background-color: rgb(72, 72, 72);
 	background-image: url("./assets/fondoBN.png");
-	background-repeat: no-repeat;
+	background-repeat: round;
+	resize: both;
+	overflow: auto;
 	background-size: cover;
-	background-position: center;
+	/* background-position: center; */
 	color: white;
 }
 
