--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,12 @@ a:hover {
 }
 
 body {
-	margin: 0;
+	margin: 0 auto;
 	display: flex;
 	/* place-items: center; */
 	/* min-width: 320px; */
 	min-height: 100vh;
+	max-width: 1920px;
 	width: 100%;
+	background-color: #0d2e4b;
 }
